# Driftville_Agent

./: .env  .env.example  .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  LICENSE  README.md  labels.json  package-lock.json  prompts.txt  pyproject.toml  requirements.txt  requirements_pypi.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
app/: .gitignore  app.py
app/archive/: event_logs.jsonl  event_logs_v2.jsonl  memory.jsonl  memory_v2.jsonl
app/config/: __init__.py  config.py  config.yaml
app/eval/: layer_feedback.csv
app/logs/: __init__.py  sessions_with_inherent_drift.csv
app/src/: agent_personas.json  agents.py  brain.py  conversation_manager.py  driftville_personas.json  driftville_personas_v10_qwen3-next:80b-cloud.json  driftville_personas_v11_deepseek-v3.2:cloud.json  driftville_personas_v12_deepseek-v3.2:cloud.json  driftville_personas_v1_gemini_2.5_flash_lite.json  driftville_personas_v2_gpt_oss_20b_cloud.json  driftville_personas_v3_deepseek_v3.2_cloud.json  driftville_personas_v4_qwen3_next_80b_cloud.json  driftville_personas_v5_glm_4.7_cloud.json  driftville_personas_v6_gpt_oss_20b_cloud.json  driftville_personas_v7_gemini-3-flash-preview:cloud.json  driftville_personas_v8_gemini-3-flash-preview:cloud .json  driftville_personas_v9_gpt-oss:20b-cloud.json  embedding_utils.py  gemini_api.py  llm_api.py  metrics.ipynb  metrics.py  observe_non_llm_agent.py  ollama_api.py  (+8 more)
app2/: app2.py  session.json
decision_logs/: decisions_jaelin.txt
tools/: drift_analysis.py  edit_image_res.py  generate_nanobanana_prompts.py  generate_scene_pairs.py  langfuse_read_prompt.py  langfuse_score.py  langfuse_setup.py  log_view.html  view_logs.py
(+44 files in other folders)
