[tool.poetry]
name = "driftville"
version = "0.1.0"
description = ""
authors = ["Jaelin Lee <jaelin215@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
langfuse = "^3.10.6"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
pandas = "^2.3.3"
numpy = "^2.3.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.8"
google-adk = "^1.21.0"
flask = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
