[tool.poetry]
name = "driftville"
version = "0.1.0"
description = ""
authors = ["Jaelin Lee <jaelin215@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
langfuse = "^3.10.6"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
pandas = "^2.3.3"
numpy = "^2.3.5"
seaborn = "^0.13.2"
matplotlib = "^3.10.8"
google-adk = "^1.21.0"
flask = "^3.1.2"
litellm = "^1.80.16"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app", "app2", "tools"]
src_paths = ["app", "app2", "tools"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501", "E402"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
